[package]
name = "nextnfs-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nextnfs-proto = { path = "../proto" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-xdr = "0.6.0"
serde_bytes = "0.11"
serde_derive = "1.0"
tokio = { version = "1", features = ["full", "tracing", "net"] }
bytes = "1.7"
byteorder = "1.5"
tracing = "0.1"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"
multi_index_map = "0.11"
vfs = "0.12.0"
sha2 = "0.10"
serde_bytes_ng = "0.1"
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.4"
async-trait = "0.1"
socket2 = "0.5"
libc = "0.2"

[dev-dependencies]
tracing-test = "0.2"
tempfile = "3"
