[package]
name = "nextnfs-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
bytes = "1.7"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-xdr = "0.6.0"
serde_bytes = "0.11"
serde_derive = "1.0"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
